Mobile image pointer overlap fix & recycling image transparency

--- a/src/app/components/ui/slider/slider.component.scss
+++ b/src/app/components/ui/slider/slider.component.scss
@@ -46,6 +46,7 @@
 			@media (max-width: 750px) {
 				margin-left: -590px;
 			}
+			pointer-events: none;
 		}
 	}
 	&Yellow {
